--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -23,7 +23,7 @@
                     {% endif %}
                     
                     <!-- Username field -->
-                    <div class="mb-3">
+                    <div class="mb-3 text-start">
                         <label for="username" class="form-label">Username</label>
                         <input type="text" name="username" class="form-control" required id="username">
                         {% if form.username.errors %}
@@ -34,7 +34,7 @@
                     </div>
 
                     <!-- Email field -->
-                    <div class="mb-3">
+                    <div class="mb-3 text-start">
                         <label for="email" class="form-label">Email address</label>
                         <input type="email" name="email" class="form-control" required id="email">
                         {% if form.email.errors %}
@@ -45,7 +45,7 @@
                     </div>
 
                     <!-- Mobile Number field -->
-                    <div class="mb-3">
+                    <div class="mb-3 text-start">
                         <label for="mobile_number" class="form-label">Mobile Number</label>
                         <input id="mobile_number" type="tel" name="mobile_number" class="form-control" required>
                         {% if form.mobile_number.errors %}
@@ -56,7 +56,7 @@
                     </div>
 
                     <!-- Password field -->
-                    <div class="mb-3">
+                    <div class="mb-3 text-start">
                         <label for="password1" class="form-label">Password</label>
                         <input type="password" name="password1" class="form-control" required id="password1">
                         {% if form.password1.errors %}
@@ -67,7 +67,7 @@
                     </div>
 
                     <!-- Password confirmation field -->
-                    <div class="mb-3">
+                    <div class="mb-3 text-start">
                         <label for="password2" class="form-label">Password confirmation</label>
                         <input type="password" name="password2" class="form-control" required id="password2">
                         {% if form.password2.errors %}
@@ -78,14 +78,15 @@
                     </div>
 
                     <!-- User type field -->
-                    <div class="mb-3 position-relative">
+                    <div class="mb-3 text-start position-relative">
                         <label for="user_type" class="form-label">User type</label>
-                        <select name="user_type" class="form-control" required id="user_type">
+                        <div class="position-relative">
+                        <select name="user_type" class="form-select" required id="user_type">
                             <option value="USER" title="Regular User: Can browse and adopt animals.">Regular User</option>
                             <option value="VOLUNTEER" title="Volunteer: Can assist in animal rescue operations.">Volunteer</option>
                             <option value="ADMIN" title="Administrator: Has full access to manage the system.">Administrator</option>
                         </select>
-                        <i class="fas fa-chevron-down position-absolute" style="right: 10px; top: 55%; transform: translateY(-50%);"></i>
+                        </div>
                         {% if form.user_type.errors %}
                             <div class="text-danger">
                                 {{ form.user_type.errors }}
