--- a/templates/rescue/animal_form.html
+++ b/templates/rescue/animal_form.html
@@ -15,7 +15,7 @@
             {% endfor %}
         </div>
     </div>
-    <div class="mt-3">
+    <div class="mt-3" style="display: flex; gap: 10px;">
         <button type="submit" class="btn btn-primary">Save</button>
         <a href="{% url 'animal_list' %}" class="btn btn-secondary">Cancel</a>
     </div>
