--- a/templates/rescue/animal_list.html
+++ b/templates/rescue/animal_list.html
@@ -1,9 +1,9 @@
 {% extends 'rescue/base.html' %}
 
 {% block content %}
-<div class="d-flex justify-content-between align-items-center mb-4">
+<div class="d-flex justify-content-between align-items-center mb-4 flex-wrap">
     <h2>Animals</h2>
-    <a href="{% url 'animal_create' %}" class="btn btn-primary">
+    <a href="{% url 'animal_create' %}" class="btn btn-primary btn-sm">
         <i class="fas fa-plus"></i> Add New Animal
     </a>
 </div>
