--- a/templates/donation/donations.html
+++ b/templates/donation/donations.html
@@ -9,7 +9,7 @@
                <th>User</th>
                <th>Amount</th>
                <th>Date</th>
-               <th>NGO</th>
+               <th>Organization</th>
            </tr>
        </thead>
        <tbody>
