--- a/templates/registration/contact_us.html
+++ b/templates/registration/contact_us.html
@@ -15,17 +15,18 @@
                 </div>
                 <div class="card-body">
                     <form method="POST">
+                        {% csrf_token %}
                         <div class="mb-3 text-start">
                             <label for="name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="name">
+                            <input type="text" class="form-control" id="name" name="name" required>
                         </div>
                         <div class="mb-3 text-start">
                             <label for="email" class="form-label">Email</label>
-                            <input type="email" class="form-control" id="email">
+                            <input type="email" class="form-control" id="email" name="email" required>
                         </div>
                         <div class="mb-3 text-start">
                             <label for="message" class="form-label">Message</label>
-                            <textarea class="form-control" id="message" rows="4"></textarea>
+                            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
@@ -38,7 +39,7 @@
                     <h3>Contact Information</h3>
                 </div>
                 <div class="card-body text-start">
-                    <p>Email: <a href="mailto:contact@wesalvatore.com">contact@wesalvatore.com</a></p>
+                    <p>Email: <a href="mailto:{{ contact_email }}">contact@wesalvatore.com</a></p>
                 </div>
             </div>
         </div>
